# lsl-harness

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  portfolio-readiness.md  pyproject.toml  pytest.ini  settingsprocess.md  third_party_notices.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: DEVELOPER_GUIDE.md  readability_audit.md
docs/assets/demo_report/: latency.csv  report.html  summary.json  times.csv
docs/cases/: lsl-harness-arc3-v0.1-predev.md
docs/examples/: measure_settings.toml
src/lsl_harness/: __init__.py  cli.py  measure.py  metrics.py  report.py  resource_monitor.py  ring.py  settings.py
src/lsl_harness/fixtures/: synthetic_outlet.py
src/lsl_harness/templates/: report.html.j2
tests/: settings.md  test_cli.py  test_measure.py  test_metrics.py  test_report.py  test_resource_monitor.py  test_ring.py
